# 7k2

./: CMakeLists.txt  changes.txt  toolchain-mingw.cmake
include/: audio_base.h  audio_stream.h  file_input_stream.h  file_output_stream.h  file_util.h  input_stream.h  mem_input_stream.h  mouse_none.h  mouse_sdl.h  ob_prog.h  obitmap.h  obitmapw.h  ocampgn.h  ocrc_sto.h  odate.h  odb.h  odir.h  odynarr.h  odynarrb.h  oend_con.h  oerrctrl.h  of_alch.h  of_anim.h  of_fact.h  of_inn.h  of_lish.h  of_magi.h  of_mark.h  of_off2.h  of_train.h  ofile.h  ofiletxt.h  ofont.h  ogame.h  ogfile.h  ogg_stream.h  ohelp.h  oinfo.h  oitem.h  oitemres.h  (+54 more)
src/: CMakeLists.txt  EnglishToChinese.cpp  am.cpp  file_input_stream.cpp  file_output_stream.cpp  file_util.cpp  mem_input_stream.cpp  mouse_none.cpp  mouse_sdl.cpp  multiplayer.cpp  oai_act.cpp  oai_attk.cpp  oai_cap2.cpp  oai_capt.cpp  oai_dipl.cpp  oai_info.cpp  oai_talk.cpp  obitmap.cpp  obitmapw.cpp  oc_pla2.cpp  ocampgn.cpp  ocampgn2.cpp  ocampgn4.cpp  oconfig.cpp  ocrc_sto.cpp  odate.cpp  odb.cpp  odplay.cpp  odynarr.cpp  oend_con.cpp  oerrctrl.cpp  oexpmask.cpp  of_animi.cpp  of_basew.cpp  of_camp.cpp  of_forti.cpp  of_lairi.cpp  of_lish.cpp  of_magi.cpp  of_marka.cpp  (+91 more)
src/imgfun/: CMakeLists.txt
